--- a/documentation/classes/Animal.html
+++ b/documentation/classes/Animal.html
@@ -142,7 +142,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date" target="_blank" >Date</a></code>
+                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 
                         </td>
                     </tr>
@@ -151,7 +151,7 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @Column({name: &#x27;data_nascimento&#x27;})<br />
+                                @Column({name: &#x27;data_nascimento&#x27;, type: &#x27;timestamp&#x27;})<br />
                             </code>
                         </td>
                     </tr>
@@ -441,8 +441,8 @@ export class Animal extends BaseEntity {
     @Column({ name: &#x27;nome&#x27; })
     name: string;
 
-    @Column({ name: &#x27;data_nascimento&#x27; })
-    birthDate: Date;
+    @Column({ name: &#x27;data_nascimento&#x27;, type: &#x27;timestamp&#x27; })
+    birthDate: string;
 
     @Column({ name: &#x27;especie_animal&#x27; })
     species: string;
