--- a/documentation/classes/CreateAnimalDto.html
+++ b/documentation/classes/CreateAnimalDto.html
@@ -127,7 +127,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date" target="_blank" >Date</a></code>
+                            <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 
                         </td>
                     </tr>
@@ -136,13 +136,13 @@
                             <b>Decorators : </b>
                             <br />
                             <code>
-                                @ApiProperty({description: &#x27;Data de nascimento&#x27;, example: &#x27;2/10/2020&#x27;})<br />@IsString()<br />@IsNotEmpty()<br />
+                                @ApiProperty({description: &#x27;Data de nascimento&#x27;, example: &#x27;2/10/2020&#x27;})<br />@IsNotEmpty()<br />
                             </code>
                         </td>
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/animals/dto/create-animal.dto.ts:14</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="13" class="link-to-prism">src/animals/dto/create-animal.dto.ts:13</a></div>
                             </td>
                         </tr>
 
@@ -178,7 +178,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="25" class="link-to-prism">src/animals/dto/create-animal.dto.ts:25</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="24" class="link-to-prism">src/animals/dto/create-animal.dto.ts:24</a></div>
                             </td>
                         </tr>
 
@@ -250,7 +250,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/animals/dto/create-animal.dto.ts:20</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/animals/dto/create-animal.dto.ts:19</a></div>
                             </td>
                         </tr>
 
@@ -286,7 +286,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="31" class="link-to-prism">src/animals/dto/create-animal.dto.ts:31</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="30" class="link-to-prism">src/animals/dto/create-animal.dto.ts:30</a></div>
                             </td>
                         </tr>
 
@@ -316,9 +316,8 @@ export class CreateAnimalDto {
     name: string;
 
     @ApiProperty({ description: &#x27;Data de nascimento&#x27;, example: &#x27;2/10/2020&#x27; })
-    @IsString()
     @IsNotEmpty()
-    birthDate: Date;
+    birthDate: string;
 
     @ApiProperty({ description: &#x27;Espécies cadastradas&#x27;, example: &#x27;Espécie do animal&#x27; })
     @IsString()
