--- a/documentation/modules/VaccinesModule.html
+++ b/documentation/modules/VaccinesModule.html
@@ -65,71 +65,71 @@
 <title>cluster_VaccinesModule</title>
 <polygon fill="none" stroke="black" stroke-dasharray="1,5" points="37,-70 37,-268 459,-268 459,-70 37,-70"/>
 </g>
+<g id="clust6" class="cluster">
+<title>cluster_VaccinesModule_providers</title>
+<polygon fill="none" stroke="black" points="285,-78 285,-130 451,-130 451,-78 285,-78"/>
+</g>
 <g id="clust3" class="cluster">
 <title>cluster_VaccinesModule_imports</title>
-<polygon fill="none" stroke="black" points="219,-78 219,-130 451,-130 451,-78 219,-78"/>
+<polygon fill="none" stroke="black" points="45,-78 45,-130 277,-130 277,-78 45,-78"/>
 </g>
 <g id="clust4" class="cluster">
 <title>cluster_VaccinesModule_exports</title>
-<polygon fill="none" stroke="black" points="209,-208 209,-260 337,-260 337,-208 209,-208"/>
-</g>
-<g id="clust6" class="cluster">
-<title>cluster_VaccinesModule_providers</title>
-<polygon fill="none" stroke="black" points="45,-78 45,-130 211,-130 211,-78 45,-78"/>
+<polygon fill="none" stroke="black" points="152,-208 152,-260 280,-260 280,-208 152,-208"/>
 </g>
 <!-- AnimalsModule -->
 <g id="node1" class="node">
 <title>AnimalsModule</title>
-<polygon fill="#8dd3c7" stroke="black" points="443.49,-122 440.49,-126 419.49,-126 416.49,-122 336.51,-122 336.51,-86 443.49,-86 443.49,-122"/>
-<text text-anchor="middle" x="390" y="-99.8" font-family="Times,serif" font-size="14.00">AnimalsModule</text>
+<polygon fill="#8dd3c7" stroke="black" points="269.49,-122 266.49,-126 245.49,-126 242.49,-122 162.51,-122 162.51,-86 269.49,-86 269.49,-122"/>
+<text text-anchor="middle" x="216" y="-99.8" font-family="Times,serif" font-size="14.00">AnimalsModule</text>
 </g>
 <!-- VaccinesModule -->
 <g id="node3" class="node">
 <title>VaccinesModule</title>
-<polygon fill="#8dd3c7" stroke="black" points="328.35,-187 325.35,-191 304.35,-191 301.35,-187 217.65,-187 217.65,-151 328.35,-151 328.35,-187"/>
-<text text-anchor="middle" x="273" y="-164.8" font-family="Times,serif" font-size="14.00">VaccinesModule</text>
+<polygon fill="#8dd3c7" stroke="black" points="271.35,-187 268.35,-191 247.35,-191 244.35,-187 160.65,-187 160.65,-151 271.35,-151 271.35,-187"/>
+<text text-anchor="middle" x="216" y="-164.8" font-family="Times,serif" font-size="14.00">VaccinesModule</text>
 </g>
 <!-- AnimalsModule&#45;&gt;VaccinesModule -->
 <g id="edge1" class="edge">
 <title>AnimalsModule&#45;&gt;VaccinesModule</title>
-<path fill="none" stroke="black" d="M336.38,-104C328.82,-104 323.57,-104 323.57,-104 323.57,-104 323.57,-140.89 323.57,-140.89"/>
-<polygon fill="black" stroke="black" points="320.07,-140.89 323.57,-150.89 327.07,-140.89 320.07,-140.89"/>
+<path fill="none" stroke="black" d="M216,-122.11C216,-122.11 216,-140.99 216,-140.99"/>
+<polygon fill="black" stroke="black" points="212.5,-140.99 216,-150.99 219.5,-140.99 212.5,-140.99"/>
 </g>
 <!-- UsersModule -->
 <g id="node2" class="node">
 <title>UsersModule</title>
-<polygon fill="#8dd3c7" stroke="black" points="318.92,-122 315.92,-126 294.92,-126 291.92,-122 227.08,-122 227.08,-86 318.92,-86 318.92,-122"/>
-<text text-anchor="middle" x="273" y="-99.8" font-family="Times,serif" font-size="14.00">UsersModule</text>
+<polygon fill="#8dd3c7" stroke="black" points="144.92,-122 141.92,-126 120.92,-126 117.92,-122 53.08,-122 53.08,-86 144.92,-86 144.92,-122"/>
+<text text-anchor="middle" x="99" y="-99.8" font-family="Times,serif" font-size="14.00">UsersModule</text>
 </g>
 <!-- UsersModule&#45;&gt;VaccinesModule -->
 <g id="edge2" class="edge">
 <title>UsersModule&#45;&gt;VaccinesModule</title>
-<path fill="none" stroke="black" d="M273,-122.11C273,-122.11 273,-140.99 273,-140.99"/>
-<polygon fill="black" stroke="black" points="269.5,-140.99 273,-150.99 276.5,-140.99 269.5,-140.99"/>
+<path fill="none" stroke="black" d="M99,-122.11C99,-141.34 99,-169 99,-169 99,-169 150.58,-169 150.58,-169"/>
+<polygon fill="black" stroke="black" points="150.58,-172.5 160.58,-169 150.58,-165.5 150.58,-172.5"/>
 </g>
 <!-- VaccinesService  -->
 <g id="node4" class="node">
 <title>VaccinesService </title>
-<polygon fill="#fb8072" stroke="black" points="329.28,-252 216.72,-252 216.72,-216 329.28,-216 329.28,-252"/>
-<text text-anchor="middle" x="273" y="-229.8" font-family="Times,serif" font-size="14.00">VaccinesService </text>
+<polygon fill="#fb8072" stroke="black" points="272.28,-252 159.72,-252 159.72,-216 272.28,-216 272.28,-252"/>
+<text text-anchor="middle" x="216" y="-229.8" font-family="Times,serif" font-size="14.00">VaccinesService </text>
 </g>
 <!-- VaccinesModule&#45;&gt;VaccinesService  -->
 <g id="edge3" class="edge">
 <title>VaccinesModule&#45;&gt;VaccinesService </title>
-<path fill="none" stroke="black" stroke-dasharray="5,2" d="M273,-187.11C273,-187.11 273,-205.99 273,-205.99"/>
-<polygon fill="black" stroke="black" points="269.5,-205.99 273,-215.99 276.5,-205.99 269.5,-205.99"/>
+<path fill="none" stroke="black" stroke-dasharray="5,2" d="M216,-187.11C216,-187.11 216,-205.99 216,-205.99"/>
+<polygon fill="black" stroke="black" points="212.5,-205.99 216,-215.99 219.5,-205.99 212.5,-205.99"/>
 </g>
 <!-- VaccinesService -->
 <g id="node5" class="node">
 <title>VaccinesService</title>
-<ellipse fill="#fdb462" stroke="black" cx="128" cy="-104" rx="75.26" ry="18"/>
-<text text-anchor="middle" x="128" y="-99.8" font-family="Times,serif" font-size="14.00">VaccinesService</text>
+<ellipse fill="#fdb462" stroke="black" cx="368" cy="-104" rx="75.26" ry="18"/>
+<text text-anchor="middle" x="368" y="-99.8" font-family="Times,serif" font-size="14.00">VaccinesService</text>
 </g>
 <!-- VaccinesService&#45;&gt;VaccinesModule -->
 <g id="edge4" class="edge">
 <title>VaccinesService&#45;&gt;VaccinesModule</title>
-<path fill="none" stroke="black" d="M203.78,-104C214.75,-104 222.43,-104 222.43,-104 222.43,-104 222.43,-140.89 222.43,-140.89"/>
-<polygon fill="black" stroke="black" points="218.93,-140.89 222.43,-150.89 225.93,-140.89 218.93,-140.89"/>
+<path fill="none" stroke="black" d="M368,-122.11C368,-141.34 368,-169 368,-169 368,-169 281.74,-169 281.74,-169"/>
+<polygon fill="black" stroke="black" points="281.74,-165.5 271.74,-169 281.74,-172.5 281.74,-165.5"/>
 </g>
 </g>
 </svg>
